--- a/SilentRats-Project-WebSite/HPStyle.css
+++ b/SilentRats-Project-WebSite/HPStyle.css
@@ -8,6 +8,7 @@ body {
   flex-direction: column;
   align-items: center;
   gap: 150px;
+  margin-top: 80px;
 }
 
 .titlesContainer {
@@ -215,6 +216,7 @@ body {
   display: flex;
   align-items: center;
   justify-content: center;
+  top: 0px;
 }
 
 .menuItems {
