--- a/SilentRats-Project-WebSite/HPStyle.css
+++ b/SilentRats-Project-WebSite/HPStyle.css
@@ -1,228 +1,153 @@
+/* main commands */
+
+html {
+  width: 100%;
+  height: 100%;
+  margin: 0 auto;
+}
+
 body {
-  background-color: rgb(49, 49, 49);
-  margin: 0;
+  width: 100%;
+  height: 130%;
+  margin: 0 auto;
+  background-color: #2c2c2c;
 }
 
-.mainOverview {
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  gap: 150px;
-  margin-top: 80px;
-}
-
-.titlesContainer {
-  box-shadow: 6px 6px 20px rgba(0, 0, 0, 0.45);
-  background-color: rgb(25, 25, 25);
-  width: 900px;
+main {
   display: flex;
   justify-content: center;
   align-items: center;
-}
-
-.titlesContainer h1 {
-  color: brown;
-  font-family: "Press Start 2P", cursive;
-  font-size: 60px;
-  text-align: center;
-}
-
-.frontView {
-  margin-top: 20px;
-  display: flex;
   flex-direction: column;
-  align-items: center;
-  justify-content: center;
-  gap: 40px;
 }
 
-.teamGallery {
+::-webkit-scrollbar {
+  width: 10px;
+}
+
+::-webkit-scrollbar-track {
+  background: transparent;
+}
+
+::-webkit-scrollbar-thumb {
+  background: #555;
+  border-radius: 25px;
+}
+
+::-webkit-scrollbar-thumb:hover {
+  background: #494949;
+}
+
+/* Root styles */
+
+#upMenu {
+  width: 100%;
+  height: 85px;
+  background-color: #141414;
+  position: fixed;
   display: flex;
-  flex-direction: column;
-  align-items: center;
-  gap: 50px;
-}
-
-.subTitleContainer {
-  box-shadow: 6px 6px 20px rgba(0, 0, 0, 0.45);
-  background-color: rgb(25, 25, 25);
-  width: 1280px;
-  display: flex;
-  justify-content: center;
   align-items: center;
 }
 
-.subTitleContainer h1 {
-  color: brown;
-  font-family: "Press Start 2P", cursive;
-  font-size: 60px;
-  text-align: center;
-}
-
-.mainGifContainer {
-  display: grid;
-  grid-template-columns: auto auto auto;
-  justify-content: center;
-  box-shadow: 6px 6px 20px rgba(0, 0, 0, 0.45);
-}
-
-.logoDisplay {
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  gap: 80px;
-}
+/* branch styles */
 
 .logo {
+  margin-top: 4px;
+}
+
+.firstBlockOfText {
+  width: auto;
+  height: 80px;
+  background-color: #8b2424;
+  margin-top: 105px;
+  margin-bottom: 40px;
   display: flex;
   justify-content: center;
   align-items: center;
+  padding-left: 15px;
+  padding-right: 15px;
+}
+
+.blockOfText {
+  width: auto;
+  height: 80px;
+  background-color: #8b2424;
+  margin-top: 40px;
+  margin-bottom: 40px;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  padding-left: 15px;
+  padding-right: 15px;
+}
+
+.subTitles {
+  font-family: "Press Start 2P", sans-serif;
+  font-size: 26px;
+  font-weight: bold;
+}
+
+.firstPart {
+  display: flex;
   gap: 50px;
 }
 
-.logoCube {
-  width: 700px;
-  height: 700px;
+.galleryContainer {
+  width: 840px;
+  height: 400px;
+  background-color: #383838;
+}
+
+#mainTitle {
+  font-family: "Cabin", sans-serif;
+  color: #c7c7c7;
   display: flex;
   justify-content: center;
   align-items: center;
+  flex-direction: column;
+  font-size: 40px;
 }
 
-.logoDescription {
-  display: flex;
-  align-items: center;
-  justify-content: center;
-  font-family: "Stick No Bills", sans-serif;
-  font-size: 47px;
-  width: 900px;
-  height: 600px;
+#mainTitle h1 {
+  background: linear-gradient(to bottom, #8b2424, #2c2c2c);
+  -webkit-background-clip: text;
+  -webkit-text-fill-color: transparent;
+  margin: 0 auto;
+  margin-bottom: 20px;
+  text-shadow: 6px 4px 1px rgba(0, 0, 0, 0.9);
 }
 
-.cube {
-  transform-style: preserve-3d;
-  transform: rotateX(-10deg) rotateY(135deg);
-  padding-bottom: 100px;
+#mainTitle p {
+  margin: 0 auto;
+  font-size: 35px;
+  text-shadow: 6px 6px 1px rgba(0, 0, 0, 0.9);
 }
 
-.cubeShadow {
-  background-color: rgba(0, 0, 0, 0.45);
-  box-shadow: 0px 0px 6px 6px rgba(0, 0, 0, 0.45);
-  height: 390px;
-  width: 390px;
-  transform: rotateX(-100deg) rotateZ(45deg);
-  position: absolute;
-  margin-top: 500px;
-}
-
-.backSquare,
-.frontSquare,
-.leftSquare,
-.rightSquare,
-.bottomSquare {
-  border: 1px solid;
-  height: 400px;
-  width: 400px;
-  position: absolute;
-  opacity: 86%;
-}
-
-.topSquare {
-  border: 1px solid black;
-  height: 400px;
-  width: 400px;
-  opacity: 86%;
-  transform: translateY(-50%) rotateX(90deg);
-}
-
-.bottomSquare {
-  transform: translateY(50%) rotateX(90deg);
-}
-
-.backSquare {
-  transform: translateZ(-200px) rotateY(180deg);
-}
-
-.frontSquare {
-  transform: translateZ(200px);
-}
-
-.leftSquare {
-  transform: translateX(-200px) rotateY(-90deg);
-}
-
-.rightSquare {
-  transform: translateX(200px) rotateY(90deg);
-}
-
-@keyframes loop {
-  from {
-    transform: rotateX(-10deg) rotateY(360deg);
-  }
-  to {
-    transform: rotateX(-10deg) rotateY(0deg);
-  }
-}
-
-@keyframes shadow-rotating {
-  from {
-    transform: rotateX(-100deg) rotateZ(360deg);
-  }
-  to {
-    transform: rotateX(-100deg) rotateZ(0deg);
-  }
-}
-
-.cube {
-  animation: loop 10s linear infinite;
-}
-
-.cubeShadow {
-  animation: shadow-rotating 10s linear infinite;
-}
-
-.gallery {
-  width: 320px;
-  height: 320px;
-  border-radius: 50%;
-  box-shadow: 6px 6px 20px rgba(0, 0, 0, 0.7);
-  font-family: "Montserrat", sans-serif;
-  font-size: 30px;
-  border: 2px solid red;
-}
-
-.Gallery-Container {
-  display: grid;
-  grid-template-columns: auto auto;
-  justify-content: center;
+.breakPointEffect01 {
   width: 100%;
-  gap: 40px;
-}
-.galleryItem {
-  width: 320px;
-  height: 320px;
-  border-radius: 50%;
-  background-position: center;
-  background-size: cover;
-  align-self: center;
-}
-
-.menu {
-  background-color: white;
-  width: 100vw;
-  height: 80px;
-  position: fixed;
-  z-index: 100;
-  padding-left: 0px;
-  display: flex;
-  align-items: center;
-  justify-content: center;
-  top: 0px;
-}
-
-.menuItems {
-}
-
-.menuButton {
-  width: 200px;
   height: 50px;
+  background-image: linear-gradient(to bottom, #8b2424, #2c2c2c);
+  margin: 40px 0 0 0;
+}
+
+.breakPointEffect02 {
+  width: 100%;
+  height: 50px;
+  background-image: linear-gradient(to bottom, #2c2c2c, #8b2424);
+  margin: 40px 0 0 0;
+}
+
+#quickNews {
+  width: 1100px;
+  height: 250px;
+  background-color: #383838;
+  display: grid;
+  grid-template-columns: 1fr 1fr 1fr;
+  gap: 20px;
+  padding: 20px;
+}
+
+.news {
+  width: 100%;
+  height: 100%;
+  background-color: #4b4b4b;
 }
